# ProyectoC-

Proyecto/: CMakeLists.txt  Calzado.cpp  Calzado.h  Camisetas.cpp  Camisetas.h  Inventario.cpp  Inventario.h  Pantalones.cpp  Pantalones.h  Producto.cpp  Producto.h  Proyecto.docx  main.cpp
